--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//game/migrations/0001_initial.py=utf-8
 encoding//member/migrations/0001_initial.py=utf-8
 encoding//member/owtforum.py=utf-8
+encoding//member/tests.py=utf-8
