--- a/_reset.input.example
+++ b/_reset.input.example
@@ -1,9 +1,9 @@
 from django.contrib.auth.models import User
 
-user = "admin"
+username = "admin"
 password = "password"
 
-user = User(username=admin)
+user = User(username=username)
 user.is_staff = True
 user.is_superuser = True
 user.set_password(password)
