--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//game/migrations/0001_initial.py=utf-8
 encoding//game/swf.py=utf-8
 encoding//game/tests.py=utf-8
 encoding//member/migrations/0001_initial.py=utf-8
